--- a/templates/map.html
+++ b/templates/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="height: 100%;">
   <head>
     <script
 			  src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -22,8 +22,8 @@
 .legend { text-align: left; line-height: 18px; color: #555; } .legend i { width: 18px; height: 18px; float: left; margin-right: 8px; /*! opacity: 0.7; */ }
     </style>
   </head>
-  <body>
-    <div id="mapid" style="height: 30rem;"></div>
+  <body style="height: 100%;">
+    <div id="mapid" style="height: 100%;"></div>
     <script>
 
       window.addEventListener('load', function() {
