--- a/templates/map.html
+++ b/templates/map.html
@@ -22,7 +22,7 @@
 .legend { text-align: left; line-height: 18px; color: #555; } .legend i { width: 18px; height: 18px; float: left; margin-right: 8px; /*! opacity: 0.7; */ }
     </style>
   </head>
-  <body style="height: 100%;">
+  <body style="height: 100%; margin: 0;">
     <div id="mapid" style="height: 100%;"></div>
     <script>
 
