--- a/templates/map.html
+++ b/templates/map.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <meta charset="utf-8">
-    <title>Hello from catweb</title>
+    <title>Turistas chinos en Barcelona en Weibo</title>
     <style>
     #map { width: 800px; height: 500px; }
 .info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
