--- a/templates/map.html
+++ b/templates/map.html
@@ -58,14 +58,14 @@
 
           var customColor = '#f4e195';
           if ({{ point[2] }} > 10)
-            customColor = "#fdcc8a";
-          if ({{ point[2] }} > 25)
+            //customColor = "#fdcc8a";
+          //if ({{ point[2] }} > 25)
             customColor = "#fc8d59";
-          if ({{ point[2] }} > 50)
+          if ({{ point[2] }} > 30)
             customColor = "#e34a33";
-          if ({{ point[2] }} > 75)
+          if ({{ point[2] }} > 50)
             customColor = "#d42b11";
-          if ({{ point[2] }} > 100)
+          if ({{ point[2] }} > 80)
             customColor = "#b31800";
 
           svgIcon = L.divIcon({
@@ -99,9 +99,9 @@
         legend.onAdd = function (map) {
 
           var div = L.DomUtil.create('div', 'info legend'),
-            grades = [0, 10, 25, 50, 75, 100],
+            grades = [0, 10, 30, 50, 80],
             labels = [],
-            colors = ['#f4e195',"#fdcc8a", "#fc8d59", "#e34a33", "#d42b11", "#b31800"],
+            colors = ['#f4e195', "#fc8d59", "#e34a33", "#d42b11", "#b31800"],
             from, to;
 
           for (var i = 0; i < grades.length; i++) {
